lógica crear-plato y botones modificar/eliminar impl.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
     <mat-selection-list [multiple]="false">
 
-      <a class="nav-link" routerLink="/plato">
+      <a class="nav-link" routerLink="/platos">
         <mat-list-option>
           Catálogo platos
         </mat-list-option>
