--- a/src/app/componentes/reserva/reserva.component.html
+++ b/src/app/componentes/reserva/reserva.component.html
@@ -7,7 +7,7 @@
   <div class="container">
 
     <div class="row justify-content-center pt-5">
-      <mat-stepper class="example-stepper " [orientation]="(stepperOrientation | async)!">
+      <mat-stepper linear class="example-stepper " [orientation]="(stepperOrientation | async)!">
 
         <!-- FECHA -->
         <mat-step [stepControl]="firstFormGroup" label="Día de la reserva">
