--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,3 +24,13 @@
 a{
   color: white !important;
 }
+
+mat-progress-spinner{
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
