--- a/src/app/componentes/plato/plato.component.scss
+++ b/src/app/componentes/plato/plato.component.scss
@@ -1,6 +1,7 @@
 
 .main-component{
-  position: relative;
+
+  display:block;
   height:100vh;
   max-width:100%;
   max-height: 100%;
@@ -21,10 +22,13 @@
 /*   background-color: rgb(73, 65, 65); */
 /*   background-color: rgb(59, 53, 53); */
 /*   background-color: rgb(76, 69, 69); */
-
-
-
+/* overflow-x: hidden !important; */
 }
+
+.scroll-h {
+  overflow-x: hidden !important;
+}
+
 
 .bg-card{
  /*  background-color: rgb(58, 54, 54) !important; */
@@ -35,7 +39,12 @@
   padding-top:5px;
   padding-left: 15px;
   padding-right: 15px;
+}
 
+
+.mat-tab-body-content {
+  height: 100%;
+  overflow:hidden !important;
 }
 
 .example-header-image {
@@ -49,7 +58,11 @@ p{
 }
 
 .buttons-center{
-  text-align: center;
+ /*  text-align: end; */
+  display: flex;
+  justify-content:space-evenly;
+  margin-left: 15%;
+  margin-right: 15%;
   margin-top:-15px;
 }
 
@@ -74,6 +87,14 @@ button{
   margin-top: 3.5%;
   margin-right: 2%;
   margin-left: 5%;
+}
+
+mat-tab-group{
+  overflow-x: hidden;
+}
+
+.mat-tab-labels{
+  max-width: 15vw;
 }
 
 /* BUSQUEDA */
